<resources>
    <string name="app_name">Just Java</string>
    <string name="welcome_message">Welcome to JustJava by 1172</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="topping1">Whipped Cream</string>
    <string name="topping2">Chocolate</string>
    <string name="order_button">order</string>
    <string name="review_button">review</string>
    <string name="order_summary">Order Summary</string>
    <string name="default_value">1</string>
    <string name="upperbound_message">You cannot have more than 10 coffee in one order!</string>
    <string name="lowerbound_message">You cannot have less than 1 coffee!</string>
    <string name="no_name_message">Fill in your name first!</string>
    <string name="edit_name">Name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="email_id">shubhamsharma1172@gmail.com</string>
    <string name="email_subject">JustJava order for</string>
    <string name="background_description">Background image</string>
    <string name="about">About us</string>
    <string name="about_dev">About developer</string>
    <string name="dev_name">Shubham Sharma</string>
    <string name="about_dev_content">
        \nSemicolon Labs
        \nwww.github.com/shubham1172
        \nemail: shubhamsharma1172@gmail.com
        \nphone: 8272980776
    </string>
    <string name="about_app">About app</string>
    <string name="about_app_content">
        \nJust Java is an android app developed during Android tutorials at Udacity.
        It is developed for learning purposes only and intends to harm no business or individual.
        \n\n\nPricing per coffee:\n
        Base price = Rs.25\n
        Whipped Cream = Rs. 5\n
        Chocolate = Rs. 10\n
    </string>
</resources>
