<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.semicolonlabs.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/about"
            style="@style/HeaderTextStyle"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:onClick="clickAbout"
            android:textStyle="italic"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            android:id="@+id/name"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords|textPersonName"/>

        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping1"
            android:textSize="16sp"
            android:id = "@+id/topping1"
            android:paddingLeft="24dp"
            android:paddingRight="24dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping2"
            android:textSize="16sp"
            android:id = "@+id/topping2"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text = "@string/quantity"
            style="@style/HeaderTextStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"
                android:onClick="decrement"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id = "@+id/quantity_text_view"
                android:text = "@string/default_value"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="16dp"  />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:onClick="increment"
                android:layout_marginEnd="16dp"/>


        </LinearLayout>

        <TextView
            android:text="@string/order_summary"
            style="@style/HeaderTextStyle"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/order_summary_text_view"
            android:text="@string/minus"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"  />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_button"
                android:onClick="reviewOrder"  />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_button"
                android:onClick="submitOrder" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>